unix: Report connected status to socket module

Report connected status to the socket module. Otherwise, operations
like `getpeername` would not work correctly.

Fixes #18534.

Change-Id: I99d047f0d7b4d442cc2b3ea9222b0d89d216c1ae
Reviewed-on: https://review.haiku-os.org/c/haiku/+/6719
Reviewed-by: waddlesplash <waddlesplash@gmail.com>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>